# siteeditor

./: .gitignore  Cargo.toml  README.md  THEME_AUTHORING.md  package-lock.json  package.json
crates/deploy-contract/: Cargo.toml
crates/deploy-contract/src/: diff.rs  lib.rs  manifest.rs  profile.rs  uploader.rs
crates/deploy-ftp/: Cargo.toml
crates/deploy-ftp/src/: adapter.rs  lib.rs  path.rs
crates/deploy-sftp/: Cargo.toml
crates/deploy-sftp/src/: adapter.rs  lib.rs  path.rs  runtime.rs
crates/projectfs/: Cargo.toml
crates/projectfs/src/: lib.rs
crates/sitebuilder/: Cargo.toml
crates/sitebuilder/src/: lib.rs
crates/sitebuilder/tests/: multiple_text_blocks.rs  smoke.rs  theme_default_classes.rs
crates/theme-contract/: Cargo.toml
crates/theme-contract/src/: lib.rs
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  deploy_commands.rs  keystore.rs  lib.rs  main.rs  preview.rs
src/components/: AssetPicker.tsx  DeployModal.tsx  DeployProfilesTab.tsx  NewPageDialog.tsx  PageTree.tsx  ProjectTab.tsx  ProseEditor.tsx  RenamePageDialog.tsx  ResizableImage.tsx  SettingsModal.tsx  SidebarSplitter.tsx  ThemeCssEditor.tsx  deployTypes.ts
src/components/blocks/: BlockForms.tsx  BlockList.tsx
src/lib/: dropManager.ts
themes/: README.md
themes/default/: theme.json
themes/default/styles/: main.css
themes/default/templates/: 404.html  page.html
themes/default/templates/partials/: _menu_macros.html  head.html  menu.html
