[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/projectfs",
    "crates/theme-contract",
    "crates/sitebuilder",
    "crates/deploy-contract",
    "crates/deploy-sftp",
    "crates/deploy-ftp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Robert Boulanger"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
camino = { version = "1", features = ["serde1"] }
tera = "1"
pulldown-cmark = "0.12"

# internal crates
projectfs = { path = "crates/projectfs" }
theme-contract = { path = "crates/theme-contract" }
sitebuilder = { path = "crates/sitebuilder" }
deploy-contract = { path = "crates/deploy-contract" }
deploy-sftp = { path = "crates/deploy-sftp" }
deploy-ftp = { path = "crates/deploy-ftp" }

# Phase 10 — Deployment
sha2 = "0.10"
walkdir = "2"
