[package]
name = "siteeditor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Laientauglicher Desktop-Editor für statische Websites"

[lib]
name = "siteeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
camino.workspace = true

projectfs.workspace = true
theme-contract.workspace = true
sitebuilder.workspace = true

axum = "0.7"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
