[package]
name = "deploy-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
tracing.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
