[package]
name = "deploy-ftp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
camino.workspace = true
tracing.workspace = true
deploy-contract.workspace = true

# Plain FTP via Sync-API. Kein TLS in dieser Iteration (Zielserver
# srv05.nanet.at:21 spricht plain). Wenn FTPS dazukommt, Feature
# `native-tls`/`rustls` aktivieren und Profil-Schalter ergänzen.
suppaftp = "8"

[dev-dependencies]
