[package]
name = "deploy-sftp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
camino.workspace = true
tracing.workspace = true
deploy-contract.workspace = true

# Pure-Rust SSH/SFTP (kein OpenSSL).
russh = "0.60"
russh-sftp = "2"
tokio = { version = "1", features = ["rt", "macros", "io-util", "fs", "net", "time", "sync"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
