[package]
name = "projectfs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
tracing.workspace = true
serde_yaml = "0.9"
walkdir = "2"
