[package]
name = "sitebuilder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
camino.workspace = true
tracing.workspace = true
tera.workspace = true
pulldown-cmark.workspace = true
walkdir = "2"

projectfs.workspace = true
theme-contract.workspace = true

[dev-dependencies]
tempfile = "3"
