[package]
name = "theme-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
